refactor camel casing