@@ -25,11 +25,11 @@ class VerifierDataServiceTest extends BaseDataServiceTest {
     @Test
     @Transactional
     void insertCscasTest() {
-        verifierDataService.insertCSCAs(Collections.emptyList());
-        assertTrue(verifierDataService.findCSCAs("CH").isEmpty());
-        var dbCsca = getDefaultCSCA(0, "CH");
-        verifierDataService.insertCSCAs(Collections.singletonList(dbCsca));
-        final var certList = verifierDataService.findCSCAs("CH");
+        verifierDataService.insertCscas(Collections.emptyList());
+        assertTrue(verifierDataService.findCscas("CH").isEmpty());
+        var dbCsca = getDefaultCsca(0, "CH");
+        verifierDataService.insertCscas(Collections.singletonList(dbCsca));
+        final var certList = verifierDataService.findCscas("CH");
         assertEquals(1, certList.size());
         assertEquals(dbCsca.getKeyId(), certList.get(0).getKeyId());
         assertNotNull(certList.get(0).getImportedAt());
@@ -38,22 +38,22 @@ class VerifierDataServiceTest extends BaseDataServiceTest {
     @Test
     @Transactional
     void removeCscasNotInTest() {
-        assertTrue(verifierDataService.findCSCAs("CH").isEmpty());
-        verifierDataService.removeCSCAs(Collections.emptyList());
-        verifierDataService.removeCSCAs(Collections.singletonList("keyid_0"));
-        verifierDataService.insertCSCAs(Collections.singletonList(getDefaultCSCA(0, "CH")));
-        verifierDataService.insertCSCAs(Collections.singletonList(getDefaultCSCA(1, "CH")));
-        verifierDataService.removeCSCAs(Collections.singletonList("keyid_0"));
-        assertEquals(1, verifierDataService.findCSCAs("CH").size());
+        assertTrue(verifierDataService.findCscas("CH").isEmpty());
+        verifierDataService.removeCscas(Collections.emptyList());
+        verifierDataService.removeCscas(Collections.singletonList("keyid_0"));
+        verifierDataService.insertCscas(Collections.singletonList(getDefaultCsca(0, "CH")));
+        verifierDataService.insertCscas(Collections.singletonList(getDefaultCsca(1, "CH")));
+        verifierDataService.removeCscas(Collections.singletonList("keyid_0"));
+        assertEquals(1, verifierDataService.findCscas("CH").size());
 
         // verify manual doesnt get removed
         updateSourceForAllCscas(CertSource.MANUAL);
-        verifierDataService.removeCSCAs(Collections.singletonList("keyid_1"));
-        assertEquals(1, verifierDataService.findCSCAs("CH").size());
+        verifierDataService.removeCscas(Collections.singletonList("keyid_1"));
+        assertEquals(1, verifierDataService.findCscas("CH").size());
 
         updateSourceForAllCscas(CertSource.SYNC);
-        verifierDataService.removeCSCAs(Collections.singletonList("keyid_1"));
-        assertEquals(0, verifierDataService.findCSCAs("CH").size());
+        verifierDataService.removeCscas(Collections.singletonList("keyid_1"));
+        assertEquals(0, verifierDataService.findCscas("CH").size());
     }
 
     private void updateSourceForAllCscas(CertSource source) {
@@ -71,18 +71,18 @@ class VerifierDataServiceTest extends BaseDataServiceTest {
     @Test
     @Transactional
     void findCscaTest() {
-        verifierDataService.insertCSCAs(List.of(getDefaultCSCA(0, "CH"), getDefaultCSCA(1, "DE")));
-        assertEquals(1, verifierDataService.findCSCAs("CH").size());
+        verifierDataService.insertCscas(List.of(getDefaultCsca(0, "CH"), getDefaultCsca(1, "DE")));
+        assertEquals(1, verifierDataService.findCscas("CH").size());
     }
 
     @Test
     @Transactional
     void findActiveCscaKeyIdsTest() {
-        final var chCSCA = getDefaultCSCA(0, "CH");
-        final var deCSCA = getDefaultCSCA(1, "DE");
-        verifierDataService.insertCSCAs(List.of(chCSCA, deCSCA));
-        final var actualKeyIds = List.of(chCSCA.getKeyId(), deCSCA.getKeyId());
-        final var activeCscaKeyIds = verifierDataService.findActiveCSCAKeyIds();
+        final var chCsca = getDefaultCsca(0, "CH");
+        final var deCsca = getDefaultCsca(1, "DE");
+        verifierDataService.insertCscas(List.of(chCsca, deCsca));
+        final var actualKeyIds = List.of(chCsca.getKeyId(), deCsca.getKeyId());
+        final var activeCscaKeyIds = verifierDataService.findActiveCscaKeyIds();
         assertTrue(
                 activeCscaKeyIds.size() == actualKeyIds.size()
                         && activeCscaKeyIds.containsAll(actualKeyIds)
@@ -92,17 +92,17 @@ class VerifierDataServiceTest extends BaseDataServiceTest {
     @Test
     @Transactional
     void insertDscTest() {
-        verifierDataService.insertCSCAs(Collections.singletonList(getDefaultCSCA(0, "CH")));
-        final var cscaId = verifierDataService.findCSCAs("CH").get(0).getId();
-        verifierDataService.insertDSCs(Collections.emptyList());
-        assertTrue(verifierDataService.findActiveDSCKeyIds(nowPlus1Min()).isEmpty());
+        verifierDataService.insertCscas(Collections.singletonList(getDefaultCsca(0, "CH")));
+        final var cscaId = verifierDataService.findCscas("CH").get(0).getId();
+        verifierDataService.insertDscs(Collections.emptyList());
+        assertTrue(verifierDataService.findActiveDscKeyIds(nowPlus1Min()).isEmpty());
         final var rsaDsc = getRSADsc(0, "CH", cscaId);
-        verifierDataService.insertDSCs(Collections.singletonList(rsaDsc));
-        assertEquals(1, verifierDataService.findActiveDSCKeyIds(nowPlus1Min()).size());
+        verifierDataService.insertDscs(Collections.singletonList(rsaDsc));
+        assertEquals(1, verifierDataService.findActiveDscKeyIds(nowPlus1Min()).size());
         assertEquals(
                 rsaDsc.getKeyId(),
                 verifierDataService
-                        .findDSCs(0L, CertFormat.ANDROID, nowPlus1Min())
+                        .findDscs(0L, CertFormat.ANDROID, nowPlus1Min())
                         .get(0)
                         .getKeyId());
     }
@@ -110,83 +110,83 @@ class VerifierDataServiceTest extends BaseDataServiceTest {
     @Test
     @Transactional
     void removeDscsNotInTest() {
-        verifierDataService.insertCSCAs(Collections.singletonList(getDefaultCSCA(0, "CH")));
-        final var cscas = verifierDataService.findCSCAs("CH");
+        verifierDataService.insertCscas(Collections.singletonList(getDefaultCsca(0, "CH")));
+        final var cscas = verifierDataService.findCscas("CH");
         assertEquals(1, cscas.size());
         final var cscaId = cscas.get(0).getId();
         final var rsaDsc = getRSADsc(0, "CH", cscaId);
-        verifierDataService.insertDSCs(Collections.singletonList(rsaDsc));
-        verifierDataService.removeDSCsNotIn(Collections.emptyList());
-        assertTrue(verifierDataService.findActiveDSCKeyIds(nowPlus1Min()).isEmpty());
-        verifierDataService.removeDSCsNotIn(Collections.singletonList("keyid_0"));
+        verifierDataService.insertDscs(Collections.singletonList(rsaDsc));
+        verifierDataService.removeDscsNotIn(Collections.emptyList());
+        assertTrue(verifierDataService.findActiveDscKeyIds(nowPlus1Min()).isEmpty());
+        verifierDataService.removeDscsNotIn(Collections.singletonList("keyid_0"));
         final var ecDsc = getECDsc(1, "CH", cscaId);
-        verifierDataService.insertDSCs(List.of(rsaDsc, ecDsc));
-        verifierDataService.removeDSCsNotIn(Collections.singletonList(rsaDsc.getKeyId()));
-        assertEquals(1, verifierDataService.findActiveDSCKeyIds(nowPlus1Min()).size());
+        verifierDataService.insertDscs(List.of(rsaDsc, ecDsc));
+        verifierDataService.removeDscsNotIn(Collections.singletonList(rsaDsc.getKeyId()));
+        assertEquals(1, verifierDataService.findActiveDscKeyIds(nowPlus1Min()).size());
 
         // verify manual doesnt get removed
         updateSourceForAllDscs(CertSource.MANUAL);
-        verifierDataService.removeDSCsNotIn(Collections.singletonList(ecDsc.getKeyId()));
-        assertEquals(1, verifierDataService.findActiveDSCKeyIds(nowPlus1Min()).size());
+        verifierDataService.removeDscsNotIn(Collections.singletonList(ecDsc.getKeyId()));
+        assertEquals(1, verifierDataService.findActiveDscKeyIds(nowPlus1Min()).size());
 
         updateSourceForAllDscs(CertSource.SYNC);
-        verifierDataService.removeDSCsNotIn(Collections.singletonList(ecDsc.getKeyId()));
-        assertEquals(0, verifierDataService.findActiveDSCKeyIds(nowPlus1Min()).size());
+        verifierDataService.removeDscsNotIn(Collections.singletonList(ecDsc.getKeyId()));
+        assertEquals(0, verifierDataService.findActiveDscKeyIds(nowPlus1Min()).size());
     }
 
     @Test
     @Transactional
-    void removeDscsWithCSCAIn() {
-        verifierDataService.insertCSCAs(Collections.singletonList(getDefaultCSCA(0, "DE")));
-        verifierDataService.insertCSCAs(Collections.singletonList(getDefaultCSCA(1, "DE")));
-        final var cscas = verifierDataService.findCSCAs("DE");
+    void removeDscsWithCscaIn() {
+        verifierDataService.insertCscas(Collections.singletonList(getDefaultCsca(0, "DE")));
+        verifierDataService.insertCscas(Collections.singletonList(getDefaultCsca(1, "DE")));
+        final var cscas = verifierDataService.findCscas("DE");
         assertEquals(2, cscas.size());
         final var cscaId0 = cscas.get(0).getId();
         final var cscaId1 = cscas.get(1).getId();
         final var rsaDsc = getRSADsc(0, "DE", cscaId0);
         final var ecDsc = getECDsc(1, "DE", cscaId1);
-        verifierDataService.insertDSCs(List.of(rsaDsc, ecDsc));
-        verifierDataService.removeDSCsWithCSCAIn(Collections.emptyList());
-        assertEquals(2, verifierDataService.findActiveDSCKeyIds(nowPlus1Min()).size());
-        verifierDataService.removeDSCsWithCSCAIn(List.of(cscas.get(0).getKeyId()));
-        assertEquals(1, verifierDataService.findActiveDSCKeyIds(nowPlus1Min()).size());
+        verifierDataService.insertDscs(List.of(rsaDsc, ecDsc));
+        verifierDataService.removeDscsWithCscaIn(Collections.emptyList());
+        assertEquals(2, verifierDataService.findActiveDscKeyIds(nowPlus1Min()).size());
+        verifierDataService.removeDscsWithCscaIn(List.of(cscas.get(0).getKeyId()));
+        assertEquals(1, verifierDataService.findActiveDscKeyIds(nowPlus1Min()).size());
 
         // verify manual doesnt get removed
         updateSourceForAllDscs(CertSource.MANUAL);
-        verifierDataService.removeDSCsWithCSCAIn(List.of(cscas.get(1).getKeyId()));
-        assertEquals(1, verifierDataService.findActiveDSCKeyIds(nowPlus1Min()).size());
+        verifierDataService.removeDscsWithCscaIn(List.of(cscas.get(1).getKeyId()));
+        assertEquals(1, verifierDataService.findActiveDscKeyIds(nowPlus1Min()).size());
 
         updateSourceForAllDscs(CertSource.SYNC);
-        verifierDataService.removeDSCsWithCSCAIn(List.of(cscas.get(1).getKeyId()));
-        assertEquals(0, verifierDataService.findActiveDSCKeyIds(nowPlus1Min()).size());
+        verifierDataService.removeDscsWithCscaIn(List.of(cscas.get(1).getKeyId()));
+        assertEquals(0, verifierDataService.findActiveDscKeyIds(nowPlus1Min()).size());
     }
 
     @Test
     @Transactional
     void findDscsTest() {
-        verifierDataService.insertCSCAs(Collections.singletonList(getDefaultCSCA(0, "CH")));
-        final var cscaId = verifierDataService.findCSCAs("CH").get(0).getId();
-        verifierDataService.insertDSCs(
+        verifierDataService.insertCscas(Collections.singletonList(getDefaultCsca(0, "CH")));
+        final var cscaId = verifierDataService.findCscas("CH").get(0).getId();
+        verifierDataService.insertDscs(
                 List.of(getRSADsc(0, "CH", cscaId), getECDsc(1, "DE", cscaId)));
-        assertEquals(2, verifierDataService.findDSCs(0L, CertFormat.IOS, nowPlus1Min()).size());
+        assertEquals(2, verifierDataService.findDscs(0L, CertFormat.IOS, nowPlus1Min()).size());
     }
 
     @Test
     @Transactional
     void findMaxDscsTest() {
-        verifierDataService.insertCSCAs(Collections.singletonList(getDefaultCSCA(0, "CH")));
-        final var cscaId = verifierDataService.findCSCAs("CH").get(0).getId();
-        verifierDataService.insertDSCs(
+        verifierDataService.insertCscas(Collections.singletonList(getDefaultCsca(0, "CH")));
+        final var cscaId = verifierDataService.findCscas("CH").get(0).getId();
+        verifierDataService.insertDscs(
                 List.of(getRSADsc(0, "CH", cscaId), getECDsc(1, "DE", cscaId)));
-        final var maxDscPkId = verifierDataService.findMaxDSCPkId();
+        final var maxDscPkId = verifierDataService.findMaxDscPkId();
         assertTrue(
-                verifierDataService.findDSCs(maxDscPkId, CertFormat.IOS, nowPlus1Min()).isEmpty());
+                verifierDataService.findDscs(maxDscPkId, CertFormat.IOS, nowPlus1Min()).isEmpty());
         assertEquals(
                 1,
-                verifierDataService.findDSCs(maxDscPkId - 1, CertFormat.IOS, nowPlus1Min()).size());
+                verifierDataService.findDscs(maxDscPkId - 1, CertFormat.IOS, nowPlus1Min()).size());
     }
 
-    private DbCsca getDefaultCSCA(int idSuffix, String origin) {
+    private DbCsca getDefaultCsca(int idSuffix, String origin) {
         var dbCsca = new DbCsca();
         dbCsca.setKeyId("keyid_" + idSuffix);
         dbCsca.setCertificateRaw("cert");
@@ -201,7 +201,7 @@ class VerifierDataServiceTest extends BaseDataServiceTest {
         dbDsc.setFkCsca(fkCsca);
         dbDsc.setCertificateRaw("cert");
         dbDsc.setOrigin(origin);
-        dbDsc.setUse("DSC");
+        dbDsc.setUse("sig");
         dbDsc.setAlg(Algorithm.RS256);
         dbDsc.setN("n");
         dbDsc.setE("e");
@@ -215,7 +215,7 @@ class VerifierDataServiceTest extends BaseDataServiceTest {
         dbDsc.setFkCsca(fkCsca);
         dbDsc.setCertificateRaw("cert");
         dbDsc.setOrigin(origin);
-        dbDsc.setUse("DSC");
+        dbDsc.setUse("sig");
         dbDsc.setAlg(Algorithm.ES256);
         dbDsc.setCrv("crv");
         dbDsc.setX("x");
